Adicionando botão Exportar Excel

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="buttons">
                 <button type="submit">Calcular IMC</button>
                 <button type="button" onclick="limparCampos()">Limpar</button>
+                <button type="button" onclick="exportarExcel()">Exportar para Excel</button>
             </div>
         </form>
 
