Add gender selection to IMC form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <input type="text" id="nome" placeholder="Nome do aluno">
             <input type="text" id="serie" placeholder="Série">
             <input type="number" id="idade" placeholder="Idade">
+            <select id="sexo">
+    <option value="">Selecione o Sexo</option>
+    <option value="M">Masculino</option>
+    <option value="F">Feminino</option>
+</select>
             <input type="number" id="peso" placeholder="Peso (kg)" step="0.1">
             <input type="number" id="altura" placeholder="Altura (m)" step="0.01">
 
