--- a/index.html
+++ b/index.html
@@ -11,26 +11,34 @@
         <h1>Cadastro de Aluno</h1>
 
         <form id="imcForm">
+
             <input type="text" id="nome" placeholder="Nome do aluno">
+
             <input type="text" id="serie" placeholder="Série">
+
             <input type="number" id="idade" placeholder="Idade">
+
             <select id="sexo">
-    <option value="">Selecione o Sexo</option>
-    <option value="M">Masculino</option>
-    <option value="F">Feminino</option>
-</select>
+                <option value="" disabled selected>Selecione o Sexo</option>
+                <option value="M">Masculino</option>
+                <option value="F">Feminino</option>
+            </select>
+
             <input type="number" id="peso" placeholder="Peso (kg)" step="0.1">
+
             <input type="number" id="altura" placeholder="Altura (m)" step="0.01">
 
             <div class="buttons">
                 <button type="submit">Calcular IMC</button>
                 <button type="button" onclick="limparCampos()">Limpar</button>
-                <button type="button" onclick="exportarExcel()">Exportar para Excel</button>
+                <button type="button" onclick="exportarExcel()">Exportar Excel</button>
             </div>
+
         </form>
 
         <div id="resultado" class="card hidden"></div>
         <div id="erro" class="erro"></div>
+
     </div>
 
     <script src="script.js"></script>
